--- a/pages/sesion.html
+++ b/pages/sesion.html
@@ -32,7 +32,7 @@
 			</section>
 			<section class="e-mail">
 				<p>E-mail</p>
-				<input type="email" name="E-mail" placeholder="Ingrese su E-Mail" id="email">
+				<input type="email" name="E-mail" placeholder="example@gmail.com" id="email">
 			</section>
 			<section class="password">
 				<p>Contraseña</p>
