--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div>
 				<p id="p_section1">Explora nuestra extensa colección de libros de todos los géneros, desde clásicos atemporales hasta los últimos éxitos.</p>
 			</div>
-				<a href="pages/sesion.html">
+				<a href="pages/sesion.php">
 					<button id="btn_section1">
 						<span></span>
 						<span></span>
